# shopify-connector-website

./: .gitignore  README.md  reset_supabase_env.py
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: CartPopup.tsx  Footer.tsx  Header.tsx
frontend/src/components/ui/: alert-dialog.tsx  dialog.tsx  drawer.tsx  sheet.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: AdminPage.tsx  BlogPage.tsx  BlogPostPage.tsx  CoursesPage.tsx  HomePage.tsx  ProductsPage.tsx  ResourcesPage.tsx
